OpenSLP Change Log (stable-1-0)
-------------------------------
Please make entries to this log (in addition to the CVS log) that describe 
major changes to the OpenSLP code base.  An entries should be separated by
blank lines and include the date, developer's email, and change description.
=============================================================================

10/15/01 matt@caldera.com
Fixed problem where empty message was sent when talking to more than
one statically configured DA.  Patch from Timothy Zurcher.

*** Tag OpenSLP-1.0.3 ***

10/09/01 matt@caldera.com
Fixed "srvdereg too long bug" discovered by Timothy Zurcher 

10/09/01 matt@caldera.com
Changed install script so that it does not erase existing configuration files

10/08/01 matt@caldera.com
Fixed reconnect code to be able to interoperate with inefficient DAs that
close the stream after each srvreg/srvack exchange.  The Mac OS/X DA is 
reported to have this problem

10/08/01 matt@caldera.com
Fixed "sendbuf 2 bytes too long" as suggested by Timothy Zurcher

09/25/01 matt@caldera.com
Fixed inet_aton() on Win32

09/19/01 matt@caldera.com
Fixed configure scripts so that -lresolv is used on Solaris

09/17/01 matt@caldera.com
Removed calls that (sort of) enforce service-url checking.  This is for the
benefit of AFP's usage of SRVLOC.  Developers are now trusted not to 
register ambiguous service-urls.

09/17/01 matt@caldera.com
Applied Tomasz K?oczko patch for automake 1.5

*** Tag OpenSLP-1.0.2 ***

09/12/01 matt@caldera.com
Added slpd startup script for linux that automatically adds the multicast
route if one is not found

09/05/01 matt@caldera.com
Added calls to inet_aton() that are used before call to gethostbyname()
which should reduce name lookups and allow OpenSLP be configured to work in 
environments where name resolution is not set up.

08/31/01 matt@caldera.com
Changed code path for handling of directory-agent SrvRqst.  Fixes problems